--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <!-- tutup isi -->
     <!-- footer -->
     
-<footer class="bg-white rounded-lg shadow dark:bg-gray-900  bottom-0 fixed inset-x-0 bottom-0 p-4">
+<footer class="bg-white rounded-t-lg shadow dark:bg-gray-900  bottom-0 fixed inset-x-0 bottom-0 p-4">
     <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
         <div class="sm:flex sm:items-center sm:justify-between">
             <a href="https://flowbite.com/" class="flex items-center mb-4 sm:mb-0">
