--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <div class="container mx-auto h-56 py-10 " >
     <h1 class="text-center text-xl">SILAHKAN KLIK LINK DIBAWAH INI</h1>
     <p class="text-center text-xl"> Dibawah ini merupakan nomer marketing elektronik (MESIN CUCI , KULKAS , TV , AC , SPEAKER ,TOA , DVD ) </p>
-    <button class=" mt-5 py-4 block bg-green-500 px-5 py-2 rounded-full mx-auto text-white hover:bg-green-700  text-lg" id="random-link"> KLIK DISINI </button>
+    <button class=" mt-5 py-4 block bg-green-500 px-5 py-2 rounded-full mx-auto text-white hover:bg-green-700  text-sm" id="random-link"> KLIK DISINI </button>
 </div>
 
 <!-- tutup isi -->
